Fixing int, long casting with -ve nos.